Quick and untested 1.21 port